objects/ssot__GiftCmtChangeAttrLog__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__CampaignId__c</fullName>
        <label>Campaign</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__ChangePerDayAmount__c</fullName>
        <label>Change Per Day Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EffectiveDate__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCmtChangeStatus__c</fullName>
        <label>Change Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCmtChangeType__c</fullName>
        <label>Change Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCommitmentId__c</fullName>
        <label>Gift Commitment</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__GiftCommitmentScheduleId__c</fullName>
        <label>Gift Commitment Schedule</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Gift Cmt Change Attribution Log Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OutreachSourceCodeId__c</fullName>
        <label>Outreach Source Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1716670513288_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCmtChangeAttrLog_CampaignId_map__rel</label>
        <referenceTo>ssot__Campaign__dlm</referenceTo>
        <relationshipLabel>GiftCmtChangeAttrLog_CampaignId_map__rel</relationshipLabel>
        <relationshipName>rel_1716670513288_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724992822276_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCmtChangeAttrLog_GiftCommitmentS_rel</label>
        <referenceTo>ssot__GiftCommitmentSchedule__dlm</referenceTo>
        <relationshipLabel>GiftCmtChangeAttrLog_GiftCommitmentS_rel</relationshipLabel>
        <relationshipName>rel_1724992822276_end</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1724992825581_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>GiftCmtChangeAttrLog_GiftCommitmentI_rel</label>
        <referenceTo>ssot__GiftCommitment__dlm</referenceTo>
        <relationshipLabel>GiftCmtChangeAttrLog_GiftCommitmentI_rel</relationshipLabel>
        <relationshipName>rel_1724992825581_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>